# image-classifier

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb
src/app/: app.py
src/data/: dataio.py
src/model/: model.py
src/preprocess/: preprocess.py
src/scripts/: evaluate.py  train.py
